ResourceSelection package version history

Version 0.2-0, Oct 1, 2012
    * Generic and default method for CAIC added.

Version 0.1-5, Sept 13 20, 2012
    * new argument 'm' in rsf(), rspf() for allowing
      local availability (matched use-avalable design).
    * goats data set added from Lele and Keim 2006.
    * Rd for goats contains an example analysis, too.
    * inst/COPYING removed.

Version 0.1-4, Oct 18, 2011
    * R (>= 2.13.0) dependency added
      to avoude R CMD check ERROR on old R
      (reported by Uwe Ligges).

Version 0.1-3, August 23, 2011
    * .onLoad added to zzz.R
    * predict method subsetted the result
      when newdata was provided. Reported by
      Rajapandian Kanagaraj (UFZ).

Version 0.1-2, July 9, 2011
    * packageStartupMessage used in zzz.R .onAttach

Version 0.1-1, June 7, 2011
    * kdepairs plots abs(cor), so negative values can get large.
    * hoslem.test: only unique quantile values are used in cut().

Version 0.1-0, May 20, 2011
    * initial buch of function released to R-Forge.